--- a/css/footer.css
+++ b/css/footer.css
@@ -11,9 +11,16 @@
 }
 
 .copyright-text {
+  display: flex;
     margin-top: 20px;
     margin-bottom: 5px;
-    font-size: 3vh;
+    font-size: 2vh;
+}
+
+.social-media {
+    display: flex;
+    justify-content: space-evenly;
+    align-items: center;
 }
 
 .bxl--github {
